# plot_real_functions

./: .gitignore  README.md  pyproject.toml
learn_functions/: Funkcje.ipynb  Wykresy.ipynb  funkcja.py  plotting.py
