[tool.poetry]
name = "learn-functions"
version = "0.1.0"
description = ""
authors = ["Andrzej Legutko <andrzejlegutko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.8.0"
jupyterlab = "^4.2.5"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
jupyter-black = "^0.4.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
